update using last version of pulse - ready for demo